Step 2: 유스케이스 구현